--- a/Example/SwiftOverlay/Base.lproj/Main.storyboard
+++ b/Example/SwiftOverlay/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
-    <device id="retina4_7" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,13 +18,107 @@
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RXe-Un-7lK">
+                                <rect key="frame" x="127" y="385.66666666666669" width="121" height="41"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <state key="normal" title="Show users">
+                                    <color key="titleColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="showUsersTappedWithSender:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="3bc-F3-R81"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="github-logo" translatesAutoresizingMaskIntoConstraints="NO" id="k2B-H2-5Vq">
+                                <rect key="frame" x="16" y="44" width="343" height="341.66666666666669"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="RXe-Un-7lK" firstAttribute="top" secondItem="k2B-H2-5Vq" secondAttribute="bottom" id="G2X-fI-jRT"/>
+                            <constraint firstItem="RXe-Un-7lK" firstAttribute="centerY" secondItem="kh9-bI-dsS" secondAttribute="centerY" id="IDJ-vS-IhC"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="k2B-H2-5Vq" secondAttribute="trailing" id="JSF-6Q-7eX"/>
+                            <constraint firstItem="k2B-H2-5Vq" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="cf3-vo-TWD"/>
+                            <constraint firstItem="k2B-H2-5Vq" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="otV-ZL-FRE"/>
+                            <constraint firstItem="RXe-Un-7lK" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="qN8-EW-EFU"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="140" y="132.26600985221674"/>
+        </scene>
+        <!--Users Overlay-->
+        <scene sceneID="7MO-tk-THx">
+            <objects>
+                <viewController storyboardIdentifier="UsersOverlay" id="nol-ff-MW3" customClass="UsersOverlay" customModule="SwiftOverlay_Example" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Pl2-dc-Mth"/>
+                        <viewControllerLayoutGuide type="bottom" id="VZ2-JH-KvU"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="AGG-wN-fCC">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sSE-A0-fad">
+                                <rect key="frame" x="0.0" y="44" width="375" height="768"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ab2-T5-eYY">
+                                        <rect key="frame" x="0.0" y="50" width="375" height="718"/>
+                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <inset key="scrollIndicatorInsets" minX="0.0" minY="10" maxX="0.0" maxY="0.0"/>
+                                        <prototypes>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserProfile" rowHeight="86" id="r9E-jy-MA8">
+                                                <rect key="frame" x="0.0" y="28" width="375" height="86"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="r9E-jy-MA8" id="YCF-9v-Zmg">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="86"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </tableViewCellContentView>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </tableViewCell>
+                                        </prototypes>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="10"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <outlet property="dataSource" destination="nol-ff-MW3" id="VTq-8v-R9j"/>
+                                            <outlet property="delegate" destination="nol-ff-MW3" id="rHP-Pn-WhY"/>
+                                        </connections>
+                                    </tableView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="Ab2-T5-eYY" firstAttribute="top" secondItem="sSE-A0-fad" secondAttribute="top" constant="50" id="W7K-wp-w1a"/>
+                                    <constraint firstAttribute="bottom" secondItem="Ab2-T5-eYY" secondAttribute="bottom" id="hJt-uJ-v5c"/>
+                                    <constraint firstItem="Ab2-T5-eYY" firstAttribute="leading" secondItem="sSE-A0-fad" secondAttribute="leading" id="iGO-g9-42e"/>
+                                    <constraint firstAttribute="trailing" secondItem="Ab2-T5-eYY" secondAttribute="trailing" id="vEg-rA-9Js"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="sSE-A0-fad" firstAttribute="leading" secondItem="AGG-wN-fCC" secondAttribute="leading" id="57Q-Tm-4Mw"/>
+                            <constraint firstAttribute="trailing" secondItem="sSE-A0-fad" secondAttribute="trailing" id="j42-EY-Z6N"/>
+                            <constraint firstItem="sSE-A0-fad" firstAttribute="top" secondItem="Pl2-dc-Mth" secondAttribute="bottom" id="tLj-hJ-m6b"/>
+                            <constraint firstAttribute="bottom" secondItem="sSE-A0-fad" secondAttribute="bottom" id="vbi-WL-3bl"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableContentView" destination="sSE-A0-fad" id="UB0-mP-8CD"/>
+                        <outlet property="tableView" destination="Ab2-T5-eYY" id="pq5-xB-Ok1"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jiH-YO-Gdy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="981.60000000000002" y="124.8768472906404"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="github-logo" width="1200" height="1200"/>
+    </resources>
 </document>
